--- a/style.css
+++ b/style.css
@@ -3,6 +3,39 @@ html {
 }
 
 body {
-    min-height: 100%;
-    width: 600px;
+    background-image: url("notiz\ m294.png");
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.oberdiv {
+    width: 40%;;
+    margin-left: 44%;
+    margin-top: 10%;
+    text-align: center;
+}
+
+#buttonsDiv {
+    width: 8%;
+    margin-left: 60%;
+    text-align: center;
+}
+
+.hinzufügdiv {
+    width: 40%;;
+    margin-left: 44%;
+    margin-top: 12%;
+    text-align: center;
+}
+
+.logindiv {
+    width: 40%;;
+    margin-left: 44%;
+    margin-top: 12%;
+    text-align: center;
+}
+
+.linkdiv {
+    width: 8%;
+    margin-left: 60%;
+    text-align: center;  
 }
